Bug 395751 - krita-4.2.0-pre-alpha-fe05877-x86_64.appimage Internal error and crash when merging with layers below
Summary: krita-4.2.0-pre-alpha-fe05877-x86_64.appimage Internal error and crash when m...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-22 15:50 UTC by Tyson Tan
Modified: 2018-06-26 15:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2018-06-22 15:50:12 UTC
krita-4.2.0-pre-alpha-fe05877-x86_64.appimage crashes when doing "Merge with layer below". Showing information:

Krita: Internal Error
SAFE ASSERT (krita): "!node || node->graphListener()* in file /home/appimage/workspace/Krita_Nightly_Appimage_Build/krita/libs/ui/kis_node_manager.cpp, line 647
Comment 1 Dmitry Kazakov 2018-06-22 16:55:37 UTC
Git commit 08d65552ed44c9e9ce6c09d44c0198a416608124 by Dmitry Kazakov.
Committed on 22/06/2018 at 16:54.
Pushed by dkazakov into branch 'master'.

Change asserts into normal checks

Sometimes (during merge/grouping/ungrouping) it happens that active node
is changed by the model. The model knows only about a dummy, but not about
the node itself. And the node might have already become disconnected, even
though the dummy is still present.

M  +10   -6    libs/ui/kis_node_manager.cpp

https://commits.kde.org/krita/08d65552ed44c9e9ce6c09d44c0198a416608124
Comment 2 Tyson Tan 2018-06-22 16:57:36 UTC
Thank you Dmitry! :)
Comment 3 Halla Rempt 2018-06-25 08:16:54 UTC
Git commit f1dcbd1b2ed2de8941d1e8049d0d74be15c99d31 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 25/06/2018 at 07:57.
Pushed by rempt into branch 'krita/4.1'.

Change asserts into normal checks

Sometimes (during merge/grouping/ungrouping) it happens that active node
is changed by the model. The model knows only about a dummy, but not about
the node itself. And the node might have already become disconnected, even
though the dummy is still present.

M  +10   -6    libs/ui/kis_node_manager.cpp

https://commits.kde.org/krita/f1dcbd1b2ed2de8941d1e8049d0d74be15c99d31
Comment 4 Andrey 2018-06-26 15:02:55 UTC
Git commit b7e3a433e330e07b77b616b8991f6d1d6b59d1b1 by Andrey Kamakin, on behalf of Dmitry Kazakov.
Committed on 26/06/2018 at 14:18.
Pushed by akamakin into branch 'akamakin/T8628-multithreading-optimization'.

Change asserts into normal checks

Sometimes (during merge/grouping/ungrouping) it happens that active node
is changed by the model. The model knows only about a dummy, but not about
the node itself. And the node might have already become disconnected, even
though the dummy is still present.

M  +10   -6    libs/ui/kis_node_manager.cpp

https://commits.kde.org/krita/b7e3a433e330e07b77b616b8991f6d1d6b59d1b1