Change asserts into normal checks

Sometimes (during merge/grouping/ungrouping) it happens that active node
is changed by the model. The model knows only about a dummy, but not about
the node itself. And the node might have already become disconnected, even
though the dummy is still present.

BUG:395751